# batata-ai

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
config/: batata-ai.example.toml
crates/batata-ai-api/: Cargo.toml
crates/batata-ai-api/src/: error.rs  lib.rs  provider_factory.rs  server.rs  state.rs
crates/batata-ai-api/src/handler/: auth.rs  chat.rs  conversation.rs  health.rs  mod.rs  model.rs  rag.rs  usage.rs  vision.rs
crates/batata-ai-api/src/handler/admin/: api_key.rs  deployment.rs  mod.rs  model.rs  provider.rs  role.rs  tenant.rs  user.rs
crates/batata-ai-api/src/middleware/: auth.rs  authz.rs  jwt.rs  metrics.rs  mod.rs  rate_limit.rs  tracing_mw.rs
crates/batata-ai-core/: Cargo.toml
crates/batata-ai-core/src/: cache.rs  config.rs  crypto.rs  error.rs  event.rs  guardrail.rs  lib.rs  message.rs  multimodal.rs  object_store.rs  provider.rs  rag.rs  repository.rs  routing.rs  skill.rs
crates/batata-ai-core/src/domain/: api_key.rs  conversation.rs  cost.rs  mod.rs  model.rs  model_deployment.rs  model_provider.rs  object_store.rs  prompt.rs  provider.rs  request_log.rs  routing.rs  skill.rs  tenant.rs  usage.rs  user.rs
crates/batata-ai-local/: Cargo.toml
crates/batata-ai-local/examples/: download_models.rs
crates/batata-ai-local/src/: bge.rs  bge_m3.rs  blip.rs  clip.rs  inference.rs  lib.rs  model.rs  model_pool.rs  models.rs  phi3.rs  product_classifier.rs  provider.rs  reranker.rs  stable_diffusion.rs  whisper.rs  yolo.rs
crates/batata-ai-mcp/: Cargo.toml
crates/batata-ai-mcp/src/: client.rs  lib.rs  server.rs  tools.rs
crates/batata-ai-object-store/: Cargo.toml
crates/batata-ai-object-store/src/: lib.rs  local.rs  oss.rs  s3.rs
crates/batata-ai-prompt/: Cargo.toml
crates/batata-ai-prompt/src/: lib.rs  store.rs  template.rs
crates/batata-ai-provider/: Cargo.toml
crates/batata-ai-provider/src/: anthropic.rs  deepseek.rs  groq.rs  lib.rs  mistral.rs  ollama.rs  openai.rs  openai_compat.rs  openrouter.rs  siliconflow.rs  together.rs  zhipu.rs
crates/batata-ai-rag/: Cargo.toml
crates/batata-ai-rag/src/: builder.rs  chunker.rs  embedder.rs  hnsw_store.rs  lib.rs  loader.rs  pipeline.rs  reranker.rs  store.rs
crates/batata-ai-router/: Cargo.toml
crates/batata-ai-router/src/: cache.rs  lib.rs  redis_cache.rs  router.rs  service.rs  status.rs  webhook.rs
crates/batata-ai-router/src/guardrails/: keyword_filter.rs  length_limit.rs  mod.rs  pii_filter.rs  prompt_injection.rs
crates/batata-ai-router/src/policy/: chain.rs  cost.rs  fallback.rs  latency.rs  mod.rs  priority.rs  weighted.rs
crates/batata-ai-server/: Cargo.toml
crates/batata-ai-server/src/: main.rs
crates/batata-ai-storage/: Cargo.toml
crates/batata-ai-storage/src/: convert.rs  lib.rs
crates/batata-ai-storage/src/entity/: api_key.rs  conversation.rs  conversation_message.rs  kb_chunk.rs  kb_document.rs  knowledge_base.rs  mod.rs  model.rs  model_cost.rs  model_provider.rs  object_store_bucket.rs  object_store_config.rs  prompt.rs  prompt_version.rs  provider.rs  request_log.rs  routing_policy.rs  skill.rs  skill_version.rs  stored_object.rs  tenant.rs  tenant_usage.rs  user.rs
crates/batata-ai-storage/src/migration/: m20260404_000001_init.rs  m20260405_000001_users.rs  m20260405_000002_encrypt_secrets.rs  m20260405_000003_app_key.rs  m20260411_000001_rag.rs  m20260411_000002_rag_meta.rs  mod.rs
crates/batata-ai-storage/src/repo/: api_key.rs  conversation.rs  conversation_message.rs  kb_document.rs  knowledge_base.rs  mod.rs  model.rs  model_cost.rs  object_store_bucket.rs  object_store_config.rs  prompt.rs  provider.rs  rag_vector_store.rs  request_log.rs  routing_policy.rs  skill.rs  soft_delete.rs  stored_object.rs  tenant.rs  tenant_usage.rs  user.rs
examples/: api_server.rs  clip_embed.rs  download_model.rs  download_multimodal.rs  local_chat.rs  local_stream.rs  mcp_http_server.rs  mcp_server.rs  rag_config_smoke.rs  whisper_transcribe.rs
src/: lib.rs
