[package]
name = "batata-ai-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP API gateway for batata-ai using actix-web"

[dependencies]
batata-ai-core.workspace = true
batata-ai-storage.workspace = true
batata-ai-router.workspace = true

# Web framework
actix-web = "4"
actix-rt = "2"

# Async
async-trait.workspace = true
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Auth
sha2 = "0.10"
hex = "0.4"

# Utils
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
futures.workspace = true

# Database
sea-orm = { version = "1", features = ["runtime-tokio-rustls"] }
