[package]
name = "batata-ai-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP API gateway for batata-ai using actix-web"

[dependencies]
batata-ai-core.workspace = true
batata-ai-local.workspace = true
batata-ai-provider = { workspace = true, features = ["all"] }
batata-ai-storage.workspace = true
batata-ai-router.workspace = true

# Web framework
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"
actix-web-lab = "0.24"

# Async
async-trait.workspace = true
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Auth
sha2 = "0.10"
hex = "0.4"
argon2 = { workspace = true }
casbin = { workspace = true }
sea-orm-adapter = { workspace = true, features = ["sqlite", "runtime-tokio-rustls"] }

# Utils
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
futures.workspace = true

# Database
sea-orm = { version = "1", features = ["runtime-tokio-rustls"] }
