[package]
name = "batata-ai-local"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local model inference engine for batata-ai, powered by candle"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]

[dependencies]
batata-ai-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
hf-hub.workspace = true
tokenizers.workspace = true
tokio-stream.workspace = true
image.workspace = true

[dev-dependencies]
anyhow.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
