[package]
name = "batata-ai-prompt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Prompt template engine for batata-ai"

[dependencies]
batata-ai-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tera.workspace = true
thiserror.workspace = true
tracing.workspace = true
